--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,14 +25,14 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">E:/Abhisek/PROJECTS/Selenium/seleniumeasy-automation</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">41.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">E:/Abhisek/PROJECTS/Selenium/seleniumeasy-automation</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">47.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">E:/Abhisek/PROJECTS/Selenium/seleniumeasy-automation &#8212; passed</th></tr>
-<tr class="passedodd"><td>testcases.InputForms</td><td><a href="#m1"><b>checkboxDemo</b>  ("Test Checkbox demo")</a></td><td class="numi">1</td><td>1623174358531</td><td class="numi">28634</td></tr>
+<tr class="passedodd"><td>testcases.InputForms</td><td><a href="#m1"><b>inputForm</b>  ("Test Input form")</a></td><td class="numi">1</td><td>1623262094893</td><td class="numi">5279</td></tr>
 </table>
 <h1>E:/Abhisek/PROJECTS/Selenium/seleniumeasy-automation</h1>
-<h2 id="m1">testcases.InputForms:checkboxDemo</h2>
+<h2 id="m1">testcases.InputForms:inputForm</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
